test/expected/testV8_fuzz_accessors.out
test/v8tests/fuzz-accessors.js:34:5: [definite] TypeError, call to non-function
test/v8tests/fuzz-accessors.js:85:39: [definite] Dead assignment, property is never read
test/v8tests/fuzz-accessors.js:42:5: [definite] Unreachable function
test/v8tests/fuzz-accessors.js:54:11: [definite] Unreachable function
test/v8tests/fuzz-accessors.js:84:39: [maybe] Converting primitive boolean to object
test/v8tests/fuzz-accessors.js:84:39: [maybe] Converting primitive number to object
test/v8tests/fuzz-accessors.js:84:39: [maybe] Converting primitive string to object
test/v8tests/fuzz-accessors.js:84:39: [maybe] Reading absent property (computed name)
test/v8tests/fuzz-accessors.js:84:39: [maybe] The variable obj has values with different types
test/v8tests/fuzz-accessors.js:84:43: [maybe] The variable name has values with different types
test/v8tests/fuzz-accessors.js:85:39: [maybe] Converting primitive boolean to object
test/v8tests/fuzz-accessors.js:85:39: [maybe] Converting primitive number to object
test/v8tests/fuzz-accessors.js:85:39: [maybe] Converting primitive string to object
test/v8tests/fuzz-accessors.js:85:39: [maybe] The variable obj has values with different types
test/v8tests/fuzz-accessors.js:85:43: [maybe] The variable name has values with different types
test/v8tests/fuzz-accessors.js:85:39: [info] Writing to unknown property that may cause loss of precision
test/v8tests/fuzz-accessors.js:84:39: [info] Reading from unknown property that may cause loss of precision
